--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-ua",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Help for Google Universal Analytics in Vue application",
   "main": "./dist/vue-analytics.min.js",
   "author": "Andréas \"ScreamZ\" Hanss",
@@ -33,6 +33,10 @@
     "standard": "^10.0.3",
     "webpack": "^1.14.0"
   },
+  "files": [
+    "dist/*.js",
+    "types/*.d.ts"
+  ],
   "keywords": [
     "analytics",
     "universal analytics",
@@ -55,5 +59,6 @@
       "ga"
     ],
     "env": "mocha"
-  }
+  },
+  "typings": "types/index.d.ts"
 }
